<resources>
    <string name="app_name">PipBoy_v1.1</string>

    <string name="about_text">pip boy \n
        вся хуйня \n
        и т.д. \n
        и т.п.
    </string>
    <string name="about_title">О программе</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="YES">да</string>
    <string name="NO">нет</string>
    <!-- Main -->
    <string name="enter_start_code_hint">Введите код</string>

    <!-- Maps -->
    <string name="maps_coordiantes">не найдены координаты</string>
    <string name="error_show_location">Ошибка! Не найдена локация!</string>
    <string name="error_get_provider">Ошибка! Отключена навигация!</string>
    <string name="tap_text">Вы выбрали:\r\n</string>
    <string name="tap_nav">Вы</string>

    <!-- DB -->
    <string name="message_error_select">Ошибка чтения из базы данных, обратитесь к администратору</string>
    <string name="message_code_not_find">Код не найден</string>
    <string name="message_type_not_find">Ошибка! Такой тип объекта не найден</string>
    <string name="message_not_check_item">Сначала выберите объект из списка!</string>
    <string name="message_type_not_checked">Не выбран тип объекта!</string>
    <string name="message_error_on_insert">Ошибка при добавление нового элемента!</string>
    <string name="message_error_on_update">Ошибка при обновлении элемента!</string>
    <string name="message_success_insert">Элемент добавлен!</string>
    <string name="message_success_update">Элемент обновлён!</string>

    <!-- DB first -->
    <string name="back_code">XXXXXXXX</string>
    <string name="message_not_enter_code">Некорректный код</string>
    <string name="message_not_find_code">Код не найден</string>
    <string name="message_is_opened">Код уже использован</string>

    <!-- DB main -->
    <string name="media_text">Проигрыватель</string>
    <string name="object_text">Объекты</string>

    <!-- DB view -->
    <string name="error_audio_play">Ошибка при запуске аудиофайла!</string>
    <string name="timer_add">Вам добавлено время:</string>
    <string name="timer_second">секунд</string>

    <!-- Admin list -->
    <string name="admin_alert_error_reqcode">Ошибка. Неверный request code</string>
    <string name="admin_code">Код</string>
    <string name="admin_name">Заголовок</string>
    <string name="error_lenght_code">Введите корректный код!</string>
    <string name="error_name_null">Введите имя!</string>
    <string name="empty_array_list">Список элементов пуст</string>
    <string name="empty_image">Не выбрано изображение!</string>
    <string name="empty_video">Не выбрано видео!</string>
    <string name="empty_audio">Не выбрано аудио!</string>
    <string name="incorrect_integer">Введите целое число!</string>

    <!-- Admin contact -->
    <string name="admin_incorrect_number">Некорректный номер телефона</string>
    <string name="admin_contact_name">Имя</string>
    <string name="admin_contact_number">Номер телефона</string>

    <!-- Admin settings -->
    <string name="admin_number_text">Номер телефона администратора</string>
    <string name="admin_number_change">Номер телефона администратора измененён</string>
    <string name="admin_number_bad">Введите корректный номер телефона!</string>
    <string name="admin_start_timer">Начальное время таймера (сек.)</string>
    <string name="admin_start_timer_change">Начальное время таймера изменено</string>
    <string name="admin_start_timer_bad">Введите корректное значение таймера!</string>
    <string name="admin_start_code">Код для запуска таймера</string>
    <string name="admin_start_code_change">Код для запуска таймера изменён</string>
    <string name="admin_timer_sms_text">Отправлять смс, если вышло время на таймере</string>

    <!-- Settings -->
    <string name="settings_check_navigation">Навигация</string>

    <!-- Check navigation -->
    <string name="nav_coordinates">Координаты</string>
    <string name="nav_coordinates_notfind">Координаты:\r\nНе обнаружены!</string>
    <string name="nav_enabled">Включён?</string>
    <string name="nav_status">Состояние</string>
    <string name="nav_time">время</string>
    <string name="nav_provider_gps">GPS</string>
    <string name="nav_provider_network">Network</string>
    <string name="nav_location_settings">Настройки навигации</string>
    <string name="nav_error_sdk">Ошибка! Не совместимо с текущей sdk!</string>

    <!-- Weather activity -->
    <string name="weather_update_success">Данные успешно обновлены!</string>
    <string name="weather_update">Данные на</string>
    <string name="weather_humidity">Влажность:</string>
    <string name="weather_pressure">Атм. давление:</string>
    <string name="weather_wind">Ветер:</string>
    <string name="json_error">Ошибка в json</string>
    <string name="request_http_error">Ошибка http request</string>

    <!-- work with Font -->
    <string name="error_set_font_1">Невозможно установить шрифт </string>
    <string name="error_set_font_2"> вместо </string>

    <!-- sms -->
    <string name="new_message_title">Новое входящее сообщение</string>
    <string name="new_message_positive">Перейти в сообщения</string>
    <string name="new_message_negative">Закрыть</string>
    <string name="new_message_error_on_insert">Ошибка при сохранении сообщения!</string>
    <string name="input_message">Входящие</string>
    <string name="output_message">Исходящие</string>
    <string name="sms_hint_message">Текст сообщения</string>
    <string name="error_not_change_contact">Выберите получателя!</string>
    <string name="success_send_message">Сообщение отправлено!</string>
    <string name="error_send_message">Сообщение НЕ отправлено!</string>
    <string name="error_find_number">Ошибка при поиске номера!</string>
    
    <!-- radio -->
    <string name="error_set_url">Ошибка при запуске станции</string>
    <string name="error_start_service">Запустить службу не удалось</string>
    <string name="select_stations">Выберите станцию</string>
    <string name="add_stations_text">Добавить станцию</string>
    <string name="radio_hint_name">Имя станции</string>
    <string name="radio_hint_url">Адрес потока</string>
    <string name="required_name">Введите имя</string>
    <string name="required_url">Введите адрес потока</string>

    <!-- timer -->
    <string name="timer_end_message_text">Время вышло</string>
    <string name="timer_end_not_sms">Время вышло, но смс не было отправлено!(Ошибка)</string>

</resources>
