<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/folderopenback"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvTitleGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_provider_gps"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvEnabledGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvStatusGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvLocationGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_coordinates_notfind"
                android:textSize="@dimen/small_size_text">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/folderopenback">

            <TextView
                android:id="@+id/tvTitleNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_provider_network"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvEnabledNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvStatusNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_size_text">
            </TextView>
            <TextView
                android:id="@+id/tvLocationNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_coordinates_notfind"
                android:textSize="@dimen/small_size_text">
            </TextView>

        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/btnLocationSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/settings_button_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickLocationSettings"
        android:src="@drawable/setting"
        android:background="@null"/>
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_centerInParent="true"
        android:onClick="onClickBack"/>

</RelativeLayout>