<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/activity_horizontal_margin_for_back_button">
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/folderopenback"
            android:layout_weight="1.1"
            android:padding="@dimen/activity_horizontal_margin">
        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/folderopenback"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/appfunc_rename"
                android:text="@string/add_stations_text"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/appfunc_clear_selected"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/radio_hint_name"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="text" />
            <EditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/appfunc_clear_selected"
                android:hint="@string/radio_hint_url"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:inputType="text"
                android:maxLines="1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/button_play"
                    android:layout_centerInParent="true"
                    android:src="@drawable/d_add"
                    android:background="@null"
                    android:onClick="onClickSave"/>
                <ImageButton
                    android:id="@+id/button_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:src="@drawable/poweramp"
                    android:background="@null"
                    android:onClick="onClickPlay"/>
                <ImageButton
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/button_play"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:src="@drawable/systemappremover"
                    android:onClick="onClickDelete"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_centerInParent="true"
        android:onClick="onClickBack"/>
</RelativeLayout>