<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/folderopenback"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/activity_horizontal_margin_for_back_button"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toLeftOf="@+id/button_phone_change"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/text_admin_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_number_text"
                    android:background="@drawable/appfunc_rename"
                    android:gravity="center"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/admin_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="89143644279"
                    android:background="@drawable/appfunc_clear_selected"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:inputType="phone"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/button_phone_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_big"
                android:onClick="onClickPhoneChange"
                android:background="@null"
                android:src="@drawable/d_add"/>
         </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toLeftOf="@+id/button_timer_change"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/text_start_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_start_timer"
                    android:background="@drawable/appfunc_rename"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/start_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3600"
                    android:background="@drawable/appfunc_clear_selected"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/button_timer_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_big"
                android:onClick="onClickTimerChange"
                android:background="@null"
                android:src="@drawable/d_add"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/text_timer_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_timer_sms_text"
                android:background="@drawable/appfunc_rename"
                android:layout_toLeftOf="@+id/button_timer_sms_change"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textAlignment="center"/>
            <ImageButton
                android:id="@+id/button_timer_sms_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_big"
                android:onClick="onClickTimerSmsChange"
                android:src="@drawable/d_add"
                android:background="@null"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_centerInParent="true"
        android:onClick="onClickBack"/>

</RelativeLayout>